# marvelous-playstyle-engine

./: Makefile  README.md  pyproject.toml
data/processed/: style_book.json  style_book.tsv
data/raw/: MarveIous.games.json  MarveIous.pgn
engine/: Makefile
engine/include/marvelous/: chess.hpp
engine/src/: chess.cpp  main.cpp
engine/tests/: test_engine.cpp
reports/: baseline_metrics.json  style_report.json  style_report.md
src/marvelous_style/: __init__.py  analysis.py  chesscom.py  cli.py  dataset.py  evaluate.py  gui.py
src/marvelous_style.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_dataset.py  test_gui.py
web/: app.js  index.html  styles.css
